--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 streamlit==1.3.1
 numpy==1.21.3
 tensorflow==2.7.0
+tensorboard==2.7.0
 cvlib==0.2.6
 opencv-python-headless
 torch==1.10.1
+torchvision==0.11.2
 jina==2.6.4
 Pillow==8.4.0
 deepface==0.0.68
