--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ tensorflow==2.7.0
 tensorboard==2.7.0
 cvlib==0.2.6
 opencv-python-headless
-torch==1.10.1
-torchvision==0.11.2
+torch
+torchvision
 jina==2.6.4
 Pillow==8.4.0
 deepface==0.0.68
